--- a/index.html
+++ b/index.html
@@ -178,15 +178,27 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/teaser.mp4"
-                type="video/mp4">
-      </video>
+      
+      <div style="display: flex; justify-content: center; gap: 15px; margin-bottom: 15px;">
+        <div style="text-align: center; width: 32%;">
+            <img src="./static/images/class1.jpg" alt="Class 1" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <p style="margin-top: 5px; font-weight: bold;">Class A (Mild)</p>
+        </div>
+
+        <div style="text-align: center; width: 32%;">
+            <img src="./static/images/class2.jpg" alt="Class 2" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <p style="margin-top: 5px; font-weight: bold;">Class B (Moderate)</p>
+        </div>
+
+        <div style="text-align: center; width: 32%;">
+            <img src="./static/images/class3.jpg" alt="Class 3" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <p style="margin-top: 5px; font-weight: bold;">Class C (Severe)</p>
+        </div>
+      </div>
       <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
+        <span class="dnerf">Liver Cirrhosis Classification</span>: Visualizing the Progression Across 3 Critical Severity Levels.
       </h2>
+      
     </div>
   </div>
 </section>
