--- a/index.html
+++ b/index.html
@@ -181,17 +181,17 @@
       
       <div style="display: flex; justify-content: center; gap: 15px; margin-bottom: 15px;">
         <div style="text-align: center; width: 32%;">
-            <img src="./static/images/class1.jpg" alt="Class 1" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <img src="./static/images/class1.PNG" alt="Class 1" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
             <p style="margin-top: 5px; font-weight: bold;">Class A (Mild)</p>
         </div>
 
         <div style="text-align: center; width: 32%;">
-            <img src="./static/images/class2.jpg" alt="Class 2" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <img src="./static/images/class2.PNG" alt="Class 2" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
             <p style="margin-top: 5px; font-weight: bold;">Class B (Moderate)</p>
         </div>
 
         <div style="text-align: center; width: 32%;">
-            <img src="./static/images/class3.jpg" alt="Class 3" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <img src="./static/images/class3.PNG" alt="Class 3" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
             <p style="margin-top: 5px; font-weight: bold;">Class C (Severe)</p>
         </div>
       </div>
