--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
         </div>
 
         <div style="text-align: center; width: 32%;">
-            <img src="./static/images/class2.PNG" alt="Class 2" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <img src="./static/images/class2.png" alt="Class 2" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
             <p style="margin-top: 5px; font-weight: bold;">Class B (Moderate)</p>
         </div>
 
         <div style="text-align: center; width: 32%;">
-            <img src="./static/images/class3.PNG" alt="Class 3" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
+            <img src="./static/images/class3.png" alt="Class 3" style="width: 100%; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">
             <p style="margin-top: 5px; font-weight: bold;">Class C (Severe)</p>
         </div>
       </div>
