--- a/index.html
+++ b/index.html
@@ -50,38 +50,24 @@
       <span aria-hidden="true"></span>
     </a>
   </div>
+
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://keunhong.com">
-      <span class="icon">
-          <i class="fas fa-home"></i>
-      </span>
+      
+      <a class="navbar-item" href="#">
+        <div style="display: flex; flex-direction: column; align-items: center; line-height: 1.2;">
+          <img src="./static/images/Figure-2-3URNet_final.png" 
+               alt="3UResNet Logo" 
+               style="max-height: 50px; width: auto; margin-bottom: 2px;">
+          <span style="font-weight: bold; font-size: 20px; color: #333;">
+            3UResNet
+          </span>
+        </div>
       </a>
 
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More Research
-        </a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://hypernerf.github.io">
-            HyperNeRF
-          </a>
-          <a class="navbar-item" href="https://nerfies.github.io">
-            Nerfies
-          </a>
-          <a class="navbar-item" href="https://latentfusion.github.io">
-            LatentFusion
-          </a>
-          <a class="navbar-item" href="https://photoshape.github.io">
-            PhotoShape
-          </a>
-        </div>
-      </div>
     </div>
-
   </div>
 </nav>
-
 
 <section class="hero">
   <div class="hero-body">
