--- a/index.html
+++ b/index.html
@@ -309,9 +309,11 @@
       
       <div class="item">
         <div style="text-align: center; padding: 10px;">
-          <img src="./static/images/Figure-3.drawio (7).drawio.png" 
-               alt="Figure 3" 
-               style="max-height: 400px; width: auto; margin: 0 auto; border-radius: 5px;">
+          <div style="height: 400px; display: flex; align-items: center; justify-content: center;">
+            <img src="./static/images/Figure-3.drawio (7).drawio.png" 
+                 alt="Figure 3" 
+                 style="max-height: 100%; max-width: 100%; width: auto; height: auto; object-fit: contain;">
+          </div>
           <p style="margin-top: 15px; font-weight: 500;">
             Figure 3: Qualitative segmentation results comparing 3UResNet with SwinUnet and TransUNet. Our model shows superior boundary detection.
           </p>
@@ -320,9 +322,11 @@
 
       <div class="item">
         <div style="text-align: center; padding: 10px;">
-          <img src="./static/images/Figure-4.png" 
-               alt="Figure 4" 
-               style="max-height: 400px; width: auto; margin: 0 auto; border-radius: 5px;">
+          <div style="height: 400px; display: flex; align-items: center; justify-content: center;">
+            <img src="./static/images/Figure-4.png" 
+                 alt="Figure 4" 
+                 style="max-height: 100%; max-width: 100%; width: auto; height: auto; object-fit: contain;">
+          </div>
           <p style="margin-top: 15px; font-weight: 500;">
             Figure 4: Quantitative comparison. 3UResNet achieved the highest Dice Score (0.9516) and IoU (0.9077) on the test set.
           </p>
@@ -331,9 +335,11 @@
 
       <div class="item">
         <div style="text-align: center; padding: 10px;">
-          <img src="./static/images/Figure-7.drawio.drawio (1).png" 
-               alt="Figure 7" 
-               style="max-height: 400px; width: auto; margin: 0 auto; border-radius: 5px;">
+          <div style="height: 400px; display: flex; align-items: center; justify-content: center;">
+            <img src="./static/images/Figure-7.drawio.drawio (1).png" 
+                 alt="Figure 7" 
+                 style="max-height: 100%; max-width: 100%; width: auto; height: auto; object-fit: contain;">
+          </div>
           <p style="margin-top: 15px; font-weight: 500;">
             Figure 7: Confusion Matrix for classification. The model shows high accuracy in distinguishing between Mild, Moderate, and Severe stages.
           </p>
@@ -342,9 +348,11 @@
 
       <div class="item">
         <div style="text-align: center; padding: 10px;">
-          <img src="./static/images/Figure-8.drawio (2).drawio (1) (1).png" 
-               alt="Figure 8" 
-               style="max-height: 400px; width: auto; margin: 0 auto; border-radius: 5px;">
+          <div style="height: 400px; display: flex; align-items: center; justify-content: center;">
+            <img src="./static/images/Figure-8.drawio (2).drawio (1) (1).png" 
+                 alt="Figure 8" 
+                 style="max-height: 100%; max-width: 100%; width: auto; height: auto; object-fit: contain;">
+          </div>
           <p style="margin-top: 15px; font-weight: 500;">
             Figure 8: ROC Curves and AUC scores illustrating the diagnostic sensitivity and specificity of the proposed framework.
           </p>
@@ -352,7 +360,7 @@
       </div>
 
     </div>
-    </div>
+  </div>
 </section>
 
 <section class="section" id="BibTeX">
